// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPill renders color pill 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: red;
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    color="red"
    type="color"
  >
    Red
  </span>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 0%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 2`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 33.33%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="33.33%"
    >
      33.33%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 3`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 50%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 4`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 66.66%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="66.66%"
    >
      66.66%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 5`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="100%"
    >
      100%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render correctly 6`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="100%"
    >
      100%
    </span>
  </div>
</DocumentFragment>
`;

exports[`ProgressPill should render with customized props 1`] = `
<DocumentFragment>
  .c0 {
  height: 20px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 .ant-progress-outer {
  padding: 0;
}

.c0 .ant-progress-outer .ant-progress-inner {
  border-radius: 25px !important;
}

.c0 .ant-progress-text {
  margin: 0px;
  text-align: center;
  vertical-align: middle;
  width: 100%;
  position: relative;
  top: -20px;
  line-height: 20px;
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-body-font-weight-bold);
}

<div
    class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default c0"
  >
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
        style="background-color: rgb(196, 196, 196); border-radius: 0;"
      >
        <div
          class="ant-progress-bg"
          style="width: 66.66%; height: 20px; border-radius: 0; background: rgb(84, 150, 234);"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
      title="66.66% success"
    >
      66.66% success
    </span>
  </div>
</DocumentFragment>
`;

exports[`SeverityPill renders P1 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-red-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="P1"
  >
    P1
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P2 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-accents-orange-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="P2"
  >
    P2
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P3 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-yellow-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="P3"
  >
    P3
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P4 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-yellow-30);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="P4"
  >
    P4
  </span>
</DocumentFragment>
`;

exports[`StatusPill renders color pill 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 20px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-red-50);
  line-height: 14px;
  font-size: var(--acx-subtitle-5-font-size);
  color: var(--acx-primary-white);
  min-width: 50px;
  text-align: center;
}

<span
    class="c0"
    color="red"
  >
    Red
  </span>
  .c0 {
  display: inline-block;
  border-radius: 20px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-green-50);
  line-height: 14px;
  font-size: var(--acx-subtitle-5-font-size);
  color: var(--acx-primary-white);
  min-width: 50px;
  text-align: center;
}

<span
    class="c0"
    color="green"
  >
    Green
  </span>
  .c0 {
  display: inline-block;
  border-radius: 20px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-yellow-50);
  line-height: 14px;
  font-size: var(--acx-subtitle-5-font-size);
  color: var(--acx-primary-white);
  min-width: 50px;
  text-align: center;
}

<span
    class="c0"
    color="yellow"
  >
    Yellow
  </span>
  .c0 {
  display: inline-block;
  border-radius: 20px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-green-50);
  line-height: 14px;
  font-size: var(--acx-subtitle-5-font-size);
  color: var(--acx-primary-white);
  min-width: 50px;
  text-align: center;
}

<span
    class="c0"
    color="test"
  >
    Green
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders negative trend 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-red-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="negative"
  >
    -123
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders no trend 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-neutrals-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="none"
  >
    0
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders positive trend 1`] = `
<DocumentFragment>
  .c0 {
  display: inline-block;
  border-radius: 10px;
  padding: 3px 8px;
  background-color: var(--acx-semantics-green-50);
  line-height: var(--acx-subtitle-6-line-height);
  font-family: var(--acx-neutral-brand-font);
  font-size: var(--acx-subtitle-6-font-size);
  color: var(--acx-primary-white);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
}

<span
    class="c0"
    type="positive"
  >
    123
  </span>
</DocumentFragment>
`;
